Fix security issues as best as possible with react-scripts-ts

--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
   "private": true,
   "sideEffects": false,
   "dependencies": {
-    "bip38": "^2.0.2",
-    "bs58": "^4.0.1",
-    "classnames": "^2.2.6",
-    "eosjs": "^20.0.0",
-    "eosjs-ecc": "^4.0.2",
-    "eosjs-signature-provider-interface": "^0.1.1",
+    "bip38": "2.0.2",
+    "bs58": "4.0.1",
+    "classnames": "2.2.6",
+    "eosjs": "20.0.0",
+    "eosjs-ecc": "4.0.2",
+    "eosjs-signature-provider-interface": "0.1.1",
     "hash.js": "1.1.5",
-    "lodash": "^4.17.11",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.1.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "^2.16.0",
-    "react-transition-group": "^2.5.3",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "ricardian-template-toolkit": "^0.2.0",
-    "ripemd160": "^2.0.2",
-    "uuid": "^3.3.2",
-    "wif": "^2.0.6"
+    "lodash": "4.17.15",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "react-redux": "5.1.1",
+    "react-router-dom": "4.3.1",
+    "react-scripts-ts": "3.1.0",
+    "react-transition-group": "2.6.0",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
+    "ricardian-template-toolkit": "0.2.0",
+    "ripemd160": "2.0.2",
+    "uuid": "3.3.2",
+    "wif": "2.0.6"
   },
   "devDependencies": {
     "@blockone/tslint-config-blockone": "^4.0.1",
@@ -66,16 +66,16 @@
     "babel-preset-stage-3": "^6.24.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^5.1.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-loader": "2.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "^7.10.0",
-    "gulp": "^3.9.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
+    "gulp": "^4.0.2",
     "gulp-crx-pack": "^1.0.2",
-    "gulp-git": "^2.8.0",
-    "gulp-json-editor": "^2.4.3",
+    "gulp-git": "^2.10.0",
+    "gulp-json-editor": "^2.5.4",
     "gulp-zip": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest-coverage-ratchet": "^0.2.3",
@@ -91,7 +91,14 @@
     "worker-loader": "^2.0.0"
   },
   "resolutions": {
-    "@types/sinon": "5.0.2"
+    "@types/sinon": "5.0.2",
+    "handlebars": "4.5.3",
+    "braces": "2.3.2",
+    "lodash": "4.17.15",
+    "js-yaml": "3.13.1",
+    "serialize-javascript": "2.1.1",
+    "webpack-dev-server": "3.1.11",
+    "mem": "4.0.0"
   },
   "scripts": {
     "build": "npm-run-all -p build-css build-js build-scripts",
